# xmore-v2

./: .env.example  ETF_INGESTION_AND_RAG_SPEC.md  FINAL_VERIFICATION.md  FINANCIAL_AUDIT_REPORT.md  IMPLEMENTATION_COMPLETE.md  MEMORY.md  PROJECT_ARCHITECTURE_EXPLANATION.md  README.md  SECURITY_AUDIT_REPORT.md  TECHNICAL_DOCS.md  TECHNICAL_EQUATIONS.md  TERMS.md  USER_MANUAL.md  VERIFICATION_REPORT.md  XMORE_DATA_GUIDE.md  XMORE_DATA_QUICKREF.md  XMORE_DATA_README.md  Xmore_Platform_Deck.md  backfill_history.py  backfill_predictions.py  brd.md  clade.md  collect_data.py  config.py  dashboard.py  database.py  evaluate.py  evaluate_trades.py  features.py  fix_stale_evaluations.py  ksa_plan.md  ppt.md  pptv2.md  pptv3.md  pptv4.md  render-ksa.yaml  render.yaml  requirements.txt  rss_news_collector.py  run_agents.py  (+6 more)
.github/: copilot-instructions.md
agents/: agent_consensus.py  agent_ma.py  agent_ml.py  agent_rsi.py  agent_volume.py  bull_bear_evaluator.py  consensus_engine.py  gemini_agent.py  risk_agent.py
ana_lyze/: CallGenAI.py  ScrapeWeb.py  __init__.py  prompts.py
audit/: __init__.py  logger.py
config/: __init__.py  execution_config.py  ksa_holidays.py  ksa_universe.py
data/: egx_live_scraper.py  ksa_ticker_map.py
derivatives/: __init__.py
derivatives_api/: README.md  main.py  (+2 more)
openbb_egx/: pyproject.toml
openbb_egx/openbb_egx/: __init__.py
openbb_egx/openbb_egx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
openbb_egx/openbb_egx/utils/: __init__.py  egx_scraper.py  yfinance_fallback.py
openbb_egx/tests/: test_egx_provider.py
(+241 files in other folders)
